--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
             <version>1.5.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.htmlparser</groupId>
+            <artifactId>htmlparser</artifactId>
+            <version>2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+
 
     </dependencies>
 
