--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
             <version>1.8.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>1.7.4</version>
+        </dependency>
 
     </dependencies>
 
