sina爬虫，爬取了博主的所有博客的url和首页相关信息

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,14 @@
-log4j.rootLogger=INFO,flume
+#log4j.rootLogger=INFO,flume
  
-log4j.appender.flume = org.apache.flume.clients.log4jappender.Log4jAppender
-log4j.appender.flume.Hostname = 192.168.10.101
-log4j.appender.flume.Port = 41414
-log4j.appender.flume.UnsafeMode = true 
+#log4j.appender.flume = org.apache.flume.clients.log4jappender.Log4jAppender
+#log4j.appender.flume.Hostname = 192.168.10.101
+#log4j.appender.flume.Port = 41414
+#log4j.appender.flume.UnsafeMode = true
+
+log4j.rootLogger=INFO,stdout
+
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.encoding=UTF-8
+log4j.appender.stdout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss,SSS} [%t] [%c] [%p] - %m%n
