--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,20 @@
             <artifactId>elasticsearch</artifactId>
             <version>1.7.4</version>
         </dependency>
+        <!-- 定时器 -->
+        <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>1.8.5</version>
+        </dependency>
+
+        <!-- curator 操作zk -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.7.1</version>
+        </dependency>
 
     </dependencies>
 
